Rebase Change database to PostGreSQL to [FEAT] Add Project

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,9 +16,9 @@ services:
   postgresql_database:
     image: postgres:latest
     environment:
-      - POSTGRES_USER=
-      - POSTGRES_PASSWORD=
-      - POSTGRES_DB=productDb
+      - POSTGRES_USER=snjAdmin
+      - POSTGRES_PASSWORD=snjAdmin1234
+      - POSTGRES_DB=snjdb
     ports:
       - "5432:5432"
     restart: always
@@ -28,8 +28,8 @@ services:
   pgadmin:
     image: dpage/pgadmin4
     environment:
-      - PGADMIN_DEFAULT_EMAIL=
-      - PGADMIN_DEFAULT_PASSWORD=
+      - PGADMIN_DEFAULT_EMAIL=user@domain.com
+      - PGADMIN_DEFAULT_PASSWORD=SuperSecret
     ports:
       - '5050:80'
     restart: always
