--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=rootuser
-spring.data.mongodb.password=rootpass
-spring.data.mongodb.database=snjdb
-spring.data.mongodb.port=27017
-mongodb.data.mongodb.host=localhost
-spring.data.mongodb.auto-index-creation=true
+spring.datasource.url= jdbc:postgresql://localhost:5432/snjdb
+spring.datasource.username= snjAdmin
+spring.datasource.password= snjAdmin1234
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
+
